--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
-    <app-root></app-root>
+  <body class="mat-typography">
+    <app-root class="min-h-screen flex flex-col"></app-root>
   </body>
 </html>
